@@ -21,6 +21,7 @@ Changes in version 3.2 M2 (2012-08-xx)
 * add defaultCharset property to StringHttpMessageConverter
 * add @ExceptionResolver annotation to detect classes with @ExceptionHandler methods
 * move RSS/Atom message converter registration ahead of jackson/jaxb2
+* handle BindException in DefaultHandlerExceptionResolver
 
 
 Changes in version 3.2 M1 (2012-05-28)
